# torrentium

./: .gitignore  Cargo.toml  stitch.py
src/: bencode.rs  lib.rs  main.rs  metadata.rs  peer.rs  sha1.rs  torrent.rs  util.rs
src/metadata/: bencode.rs  file.rs  tracker.rs
src/peer/: client.rs  downloader.rs  handshake.rs  message.rs
src/util/: io.rs  md5.rs  sha1.rs
