[package]
name = "torrentium"
version = "0.1.0"
edition = "2024"
authors = ["Matt Hems"]
description = "tools for parsing, inspecting and downloading BitTorrent files"
license = "MIT"

[dependencies]
url = "2.5.7"
percent-encoding = "2.3.2"
reqwest = "0.12"
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4", features = ["derive"] }
thiserror = "1"

[[bin]]
name = "torrent"
path = "src/main.rs"

[lib]
name = "torrent"

