[package]
name = "torrentium"
version = "0.1.0"
edition = "2024"
authors = ["Matt Hems"]
description = "tools for parsing, inspecting and downloading BitTorrent files"
license = "MIT"

[dependencies]
url = "2.5.7"
percent-encoding = "2.3.2"
reqwest = "0.12"
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tempfile = "3"
thiserror = "2"
indicatif = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "local-time"] }
tracing-appender = "0.2"
time = { version = "0.3", features = ["macros"]}

[[bin]]
name = "torrent"
path = "src/main.rs"

[lib]
name = "torrent"
